# 3dScanning

./: README.md
exercise1/: CMakeLists.txt  README.txt  main.cpp
exercise1/utils/: FreeImageHelper.h  VirtualSensor.h
exercise2/: CMakeLists.txt  main.cpp
exercise2/include/: ImplicitSurface.h  MarchingCubes.h  SimpleMesh.h
exercise3/: CMakeLists.txt
exercise3/Dragon/: dragon.cpp
exercise3/Gaussian/: gaussian.cpp
exercise3/Surface/: surface.cpp
exercise3/data/: weights_dragon.txt
exercise4/: CMakeLists.txt
exercise4/cmake/: FindFlann.cmake
exercise4/src/: main.cpp
exercise4/src/utils/: ICPOptimizer.h  PointCloud.h  ProcrustesAligner.h
